# akri-kubecon-dra-demo

./: .gitignore  README.md  love_machine.service
deployment/: cloudflare.yaml  display.yaml  mdns-discovery.yaml  web-form.yaml
eib-config/: eib.yaml
eib-config/custom/files/: config.toml.tmpl
eib-config/custom/scripts/: 60-custom-containerd.sh
eib-config/kubernetes/config/: agent.yaml  server.yaml
eib-config/kubernetes/helm/: akri.yaml
printer-service/: Cargo.toml
printer-service/icons/: README  pause-small.qoi  pause.qoi  play-small.qoi  play.qoi  print-nok-small.qoi  print-nok.qoi  print-small.qoi  print.qoi  trash-full-small.qoi  trash-full.qoi  trash-small.qoi  trash.qoi  wireless-nok-small.qoi  wireless-nok.qoi  wireless-ok-small.qoi  wireless-ok.qoi
printer-service/src/: displays.rs  icons.rs  main.rs  network.rs  printer.rs
web-form/: Cargo.toml
web-form/src/: main.rs
