[package]
name = "web-form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
base64 = "0.22.0"
env_logger = "0.11.2"
fast_qr = { version = "0.12.0", features = ["svg"] }
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }
kube = "0.88.1"
log = "0.4.21"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
